[gd_scene load_steps=11 format=3 uid="uid://bsgeoh4y1gld5"]

[ext_resource type="Texture2D" uid="uid://d203ga3jkuh5h" path="res://Assets/menu/menu1.png" id="1"]
[ext_resource type="Texture2D" uid="uid://bhwu1o813i47" path="res://Assets/menu/credits_button.png" id="2"]
[ext_resource type="Texture2D" uid="uid://c328s0gao1a06" path="res://Assets/menu/level-select_button.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ct8nfxdc338nt" path="res://Assets/menu/sound_button.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dtq772q2ia3ms" path="res://Assets/menu/tutorial_button.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bao31mc8offb6" path="res://Assets/menu/play_button.png" id="6"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://dtatfnyv8bqyw" path="res://Assets/menu/titlecard.png" id="8"]
[ext_resource type="AudioStream" uid="uid://dgsmo8h0gdfme" path="res://Assets/BGM/bgm-0.mp3" id="9"]
[ext_resource type="AudioStream" uid="uid://23ogjii7k82d" path="res://Assets/SFX/button-press.wav" id="10"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1")

[node name="Titlecard" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_right = 1776.0
offset_bottom = 1080.0
grow_horizontal = 2
scale = Vector2(0.15, 0.15)
texture = ExtResource("8")

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -132.5
offset_right = 131.0
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6")

[node name="CreditsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_right = 104.0
offset_bottom = 256.0
grow_horizontal = 0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("2")

[node name="LevelSelectButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -128.0
offset_right = 163.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("3")

[node name="SoundButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 256.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("4")

[node name="RulesButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -152.0
offset_right = 256.0
offset_bottom = 104.0
grow_vertical = 0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("5")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9")

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10")

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="RulesButton" to="." method="_on_RulesButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
